[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakdetect"
dynamic = ["version"]
authors = [{ name = " avhn"},]
description = "peakdetect is a Python library for simple peak detection."
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["Python", "peak detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'scipy',
    ]

[project.urls]
Homepage = "https://erdogant.github.io/peakdetect"
Download = "https://github.com/erdogant/peakdetect/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["peakdetect"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "peakdetect.__version__" }
